# mysite

./: .env.example  .gitignore  INSTALL.md  Makefile  README.md  manage.py  pyproject.toml
apps/avtoradio_info/: apps.py  urls.py  views.py
apps/word5/: apps.py  forms.py  urls.py  views.py
mysite/: settings.py  urls.py
static/text/: russian.txt
templates/: avtoradio.html  game-word.html  index.html  word-game.html
tests/: finder_test.py  test_finder.py
util/: finder.py
